@@ -55,6 +55,7 @@ from bzrlib.branch import (Branch,
 from bzrlib.errors import (BzrCheckError,
                            BzrError,
                            DivergedBranches,
+                           WeaveRevisionNotPresent,
                            NotBranchError,
                            NotVersionedError)
 from bzrlib.inventory import InventoryEntry
@@ -777,6 +778,29 @@ class WorkingTree(bzrlib.tree.Tree):
         """See Branch.lock_write, and WorkingTree.unlock."""
         return self.branch.lock_write()
 
+    def _basis_inventory_name(self, revision_id):
+        return 'basis-inventory.%s' % revision_id
+
+    def set_last_revision(self, new_revision, old_revision=None):
+        if old_revision:
+            try:
+                path = self._basis_inventory_name(old_revision)
+                path = self.branch._rel_controlfilename(path)
+                self.branch._transport.delete(path)
+            except:
+                pass
+        try:
+            xml = self.branch.get_inventory_xml(new_revision)
+            path = self._basis_inventory_name(new_revision)
+            self.branch.put_controlfile(path, xml)
+        except WeaveRevisionNotPresent:
+            pass
+
+    def read_basis_inventory(self, revision_id):
+        """Read the cached basis inventory."""
+        path = self._basis_inventory_name(revision_id)
+        return self.branch.controlfile(path, 'r').read()
+        
     @needs_read_lock
     def read_working_inventory(self):
         """Read the working inventory."""
